# karox

./: .gitignore  Cargo.toml  Makefile  README.md  build.mak  config.mak  flags.json  qemu.dtb  qemu.dts
kernel/: Cargo.toml  build.rs  linker.cross.ld
kernel/src/: main.rs
kernel/src/entry/: mod.rs  riscv64.rs
os/: Cargo.toml  Makefile  build.rs  features.txt  link_flags.json  linker.cross.ld
os/src/: console.rs  error.rs  logging.rs  main.rs  panic.rs
os/src/arch/: device_info.rs  endian.rs  mod.rs  sbi.rs  symbols.rs
os/src/arch/loongarch/: mod.rs  reg.rs  sbi.rs
os/src/arch/loongarch/mm/: config.rs  mod.rs  paging.rs
os/src/arch/riscv/: config.rs  hart.rs  mod.rs  reg.rs  sbi.rs
os/src/arch/riscv/mm/: config.rs  mod.rs  paging.rs  sv.rs  types.rs
os/src/arch/riscv/reg/: mm.rs  mod.rs  trap.rs
os/src/arch/riscv/task/: context.rs  switch.S  switch.rs
os/src/arch/riscv/trap/: context.rs  exc.rs  handler.S  handler.rs  intr.rs  mod.rs
os/src/dev/: dev.rs  devices.rs  driver.rs  handle.rs  hart.rs  intc.rs  mem.rs  mod.rs
os/src/dev/arch/: mod.rs
os/src/dev/ic/: ic.rs  mod.rs
os/src/dev/info/: device_tree.rs  dt.rs  mod.rs
os/src/dev/io/: mod.rs
os/src/dev/mmio/: mod.rs  reg.rs
os/src/dev/serial/: mod.rs  uart16550.rs
os/src/devices/: mod.rs
os/src/devices/device_info/: device_tree.rs  fdt.rs  mod.rs
os/src/devices/device_tree/: device_tree.rs  fdt.rs  mod.rs
os/src/devices/serial/: mod.rs  uart16550.rs
os/src/drivers/: mmio.rs  mod.rs
os/src/drivers/serial/: mod.rs  ns16550a.rs
os/src/entry/: loongarch_naked.rs  mod.rs  riscv_sbi.rs  shared.rs
os/src/mm/: config.rs  heap.rs  macros.rs  mod.rs  paging.rs  space.rs  stack.rs  types.rs
os/src/mm/frame/: buddy.rs  managed.rs  mod.rs  stack.rs
os/src/mm/paging/: mod.rs
os/src/mutex/: mod.rs  no_preempt.rs  spin.rs
os/src/sched/: fifo.rs  idle.rs  mod.rs
os/src/sync/: local.rs  mod.rs  up.rs
os/src/task/: hart.rs  mod.rs  preempt.rs  processor.rs  scheduler.rs  task.rs  test.rs  tid.rs
os/src/utils/: macros.rs  mod.rs  range.rs
(+47 files in other folders)
