[package]
name = "karox"
version = "0.1.0"
edition = "2024"

[dependencies]
config = { path = "../lib/config/"}
bitflags = {workspace = true}

[target.riscv64gc-unknown-none-elf.dependencies]
sbi-rt = { version = "0.0.2", features = ["legacy"] }

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"