[package]
name = "os"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = { workspace = true }
buddy_system_allocator = "0.11.0"
log.workspace = true
spin = "0.10.0"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
naked = []
uefi = []
uefi-rs = []
default = ["uefi", "naked"]
