[package]
name = "os"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = { workspace = true }
buddy_system_allocator = "0.11.0"
log.workspace = true
num_enum = { version = "0.7.5", default-features = false }
paste = "1.0.15"
spin = "0.10.0"

[target.riscv64gc-unknown-none-elf.dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
naked = []
uefi = []
uefi-rs = []
default = ["uefi", "naked"]
