[package]
name = "os"
version = "0.1.0"
edition = "2024"

[dependencies]
buddy_system_allocator = "0.11.0"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
num_enum = { version = "0.7.5", default-features = false }
paste = "1.0.15"
utils.path = "../lib/utils"
dt.path = "../lib/dt"
bitflags.workspace = true
log.workspace = true
spin.workspace = true

[target.riscv64gc-unknown-none-elf.dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
naked = []
uefi = []
uefi-rs = []
default = ["uefi", "naked"]
